--- a/files.titellus.net/include/footer.html
+++ b/files.titellus.net/include/footer.html
@@ -1,4 +1,5 @@
-<a href="http://titellus.net/" title="Home">titellus.net</a>
-</div>
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/js/bootstrap.min.js"
+        integrity="sha384-vZ2WRJMwsjRMW/8U7i6PWi6AlO1L79snBrmgiDpgIWJ82z8eA5lenwvxbMV1PAh7"
+        crossorigin="anonymous"></script>
 </body>
 </html>
