--- a/files.titellus.net/include/header.html
+++ b/files.titellus.net/include/header.html
@@ -1,25 +1,57 @@
-<html>
-	<head>
-		<title>titellus - File access</title>
-    <link href="http://getbootstrap.com/dist/css/bootstrap.min.css" rel="stylesheet"/>
-    <style type="text/css">
-    #site-logo {
-    right: 0px;
-    position: absolute;
-    background-image: url('http://titellus.net/img/titellus_logo.png');
-    height: 174px;
-    width: 200px;
-    background-repeat: no-repeat;
-    background-position: 0px 20px;
-    }
-    </style>
-	</head>
-	<body>
-    <div class="container-fluid">
-      <div class="row">
-        <div class="col-xs-8">
-      		<h1>Download</h1>
-        </div>
-        <div id="site-logo" class="col-xs-4"></div>
-      </div>
-    
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <title>titellus - files</title>
+  <meta charset="utf-8"/>
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1, shrink-to-fit=no"/>
+  <meta http-equiv="x-ua-compatible"
+        content="ie=edge"/>
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css"/>
+
+  <link rel="stylesheet"
+        href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.2/css/bootstrap.min.css"
+        integrity="sha384-y3tfxAZXuh4HwSYylfB+J125MxIs6mR5FOHamPBG064zB+AFeWH94NdvaCBm8qnd"
+        crossorigin="anonymous"/>
+</head>
+<body>
+<div class="container-fluid">
+  <nav class="navbar navbar-light navbar-fixed-top bg-faded">
+    <a class="navbar-brand" href="#">titellus demo</a>
+
+    <ul class="nav navbar-nav">
+      <li class="nav-item">
+        <a class="nav-link"
+           href="https://github.com/titellus"
+           title="titellus on GitHub">
+          <i class="fa fa-github"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           href="http://ci.titellus.net/jenkins"
+           title="Continuous Integration">
+          <i class="fa fa-dashboard"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           href="http://files.titellus.net"
+           title="Downloads">
+          <i class="fa fa-cloud-download"></i>
+        </a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link"
+           href="http://apps.titellus.net"
+           title="Live demo">
+          <i class="fa fa-play"></i>
+        </a>
+      </li>
+    </ul>
+  </nav>
+
+
+  <div style="margin-top:80px">
